# selene

./: .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
selene/: action.py  config.py  config_default.yaml  render.py  scene.py  selene.py  timer.py
selene/plugins/: __init__.py  specs.py
selene/plugins/actions/: __init__.py  echo.py  hue.py  pro_breeze.py  sonos.py
selene/plugins/echo/: echo.py
selene/plugins/hue/: hue.py
selene/plugins/spotify/: spotify.py
tests/: test_action.py  test_action_hue.py  test_action_sonos.py  test_config.py  test_scene.py
tests/assets/: config_missing_buttons.yaml  config_valid.yaml
