[tool.poetry]
name = "selene"
version = "0.1.0"
description = "Control things in your house from a StreamDeck."
authors = ["Adrien P. <ap@cdfr.net>"]
repository = "https://github.com/crashdump/selene"
readme = "README.md"
license = "MIT"
keywords = [
    "StreamDeck",
    "Home Automation",
    "Spotify",
    "Hue"
]


[tool.poetry.dependencies]
python = "^3.8"
confuse = "^1.7.0"
streamdeck = "^0.9.1"
Pillow = "^10.2.0"
pluggy = "^1.0.0"
soco = "^0.28.0"
hue-api = "^0.4.7"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = "^6.4.1"
pytest-cov = "^3.0.0"
pylint = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "selene.main:main"

[tool.poetry.urls]
issues = "https://github.com/crashdump/selene/issues"